--- a/Proyecto PyM/Notebook.ipynb
+++ b/Proyecto PyM/Notebook.ipynb
@@ -7,6 +7,346 @@
    "source": [
     "# Avance 3\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e825b4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Tools import tools as t "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fbb927ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base de datos creada/conectada\n",
+      "Tabla creada\n",
+      "Estás insertando info de un rango fechas :D\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-01 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-02 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-03 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-04 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-05 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-06 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-07 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-08 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-09 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-10 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-11 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-12 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-13 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-14 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-15 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-16 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-17 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-18 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-19 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-20 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-21 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-22 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-23 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-24 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-25 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-26 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-27 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-28 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-29 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-30 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n",
+      "Comienzo del programa .....\n",
+      "Generación exitosa al 2025-01-31 con 71 ventas\n",
+      "Comienzo de las inserciones ....\n",
+      "Inserción existosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "t.inicializar_bdd()\n",
+    "t.generar_bdd_rango('2025-01-01', '2025-01-31')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "25a25de1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Sucursal</th>\n",
+       "      <th>Producto</th>\n",
+       "      <th>Clave_Producto</th>\n",
+       "      <th>Precio</th>\n",
+       "      <th>Cantidad_Vendida</th>\n",
+       "      <th>Total_Ticket</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Santa Fé</td>\n",
+       "      <td>Pinturas</td>\n",
+       "      <td>HIX-345</td>\n",
+       "      <td>2007.18</td>\n",
+       "      <td>409</td>\n",
+       "      <td>820936.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Zócalo</td>\n",
+       "      <td>Mochilas</td>\n",
+       "      <td>EDE-495</td>\n",
+       "      <td>6911.70</td>\n",
+       "      <td>819</td>\n",
+       "      <td>5660682.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Milpa Alta</td>\n",
+       "      <td>Pc</td>\n",
+       "      <td>NPD-486</td>\n",
+       "      <td>1234.51</td>\n",
+       "      <td>556</td>\n",
+       "      <td>686387.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>Cargadores</td>\n",
+       "      <td>NUU-712</td>\n",
+       "      <td>2787.79</td>\n",
+       "      <td>593</td>\n",
+       "      <td>1653159.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Milpa Alta</td>\n",
+       "      <td>Pinturas</td>\n",
+       "      <td>HKJ-692</td>\n",
+       "      <td>7216.95</td>\n",
+       "      <td>305</td>\n",
+       "      <td>2201169.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>CU</td>\n",
+       "      <td>Pc</td>\n",
+       "      <td>QPB-826</td>\n",
+       "      <td>4272.52</td>\n",
+       "      <td>999</td>\n",
+       "      <td>4268247.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Narvarte</td>\n",
+       "      <td>Sacapuntas</td>\n",
+       "      <td>LVG-178</td>\n",
+       "      <td>9041.84</td>\n",
+       "      <td>300</td>\n",
+       "      <td>2712552.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>Cuadernos</td>\n",
+       "      <td>FQB-314</td>\n",
+       "      <td>9533.63</td>\n",
+       "      <td>413</td>\n",
+       "      <td>3937389.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>CU</td>\n",
+       "      <td>Sacapuntas</td>\n",
+       "      <td>UVT-533</td>\n",
+       "      <td>8475.74</td>\n",
+       "      <td>794</td>\n",
+       "      <td>6729737.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>Cuemanco</td>\n",
+       "      <td>Cuadernos</td>\n",
+       "      <td>UTJ-719</td>\n",
+       "      <td>2653.79</td>\n",
+       "      <td>692</td>\n",
+       "      <td>1836422.68</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha    Sucursal    Producto Clave_Producto   Precio  \\\n",
+       "0  2025-01-01    Santa Fé    Pinturas        HIX-345  2007.18   \n",
+       "1  2025-01-01      Zócalo    Mochilas        EDE-495  6911.70   \n",
+       "2  2025-01-01  Milpa Alta          Pc        NPD-486  1234.51   \n",
+       "3  2025-01-01      Centro  Cargadores        NUU-712  2787.79   \n",
+       "4  2025-01-01  Milpa Alta    Pinturas        HKJ-692  7216.95   \n",
+       "5  2025-01-01          CU          Pc        QPB-826  4272.52   \n",
+       "6  2025-01-01    Narvarte  Sacapuntas        LVG-178  9041.84   \n",
+       "7  2025-01-01      Centro   Cuadernos        FQB-314  9533.63   \n",
+       "8  2025-01-01          CU  Sacapuntas        UVT-533  8475.74   \n",
+       "9  2025-01-01    Cuemanco   Cuadernos        UTJ-719  2653.79   \n",
+       "\n",
+       "   Cantidad_Vendida  Total_Ticket  \n",
+       "0               409     820936.62  \n",
+       "1               819    5660682.30  \n",
+       "2               556     686387.56  \n",
+       "3               593    1653159.47  \n",
+       "4               305    2201169.75  \n",
+       "5               999    4268247.48  \n",
+       "6               300    2712552.00  \n",
+       "7               413    3937389.19  \n",
+       "8               794    6729737.56  \n",
+       "9               692    1836422.68  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "    * \n",
+    "FROM \n",
+    "    Ventas\n",
+    "LIMIT\n",
+    "    10\n",
+    "\"\"\"\n",
+    "\n",
+    "t.consultar(query)"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
