--- a/Proyecto PyM/Notebook.ipynb
+++ b/Proyecto PyM/Notebook.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "25a25de1",
    "metadata": {},
    "outputs": [
@@ -250,56 +250,6 @@
        "      <td>305</td>\n",
        "      <td>2201169.75</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>CU</td>\n",
-       "      <td>Pc</td>\n",
-       "      <td>QPB-826</td>\n",
-       "      <td>4272.52</td>\n",
-       "      <td>999</td>\n",
-       "      <td>4268247.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>Narvarte</td>\n",
-       "      <td>Sacapuntas</td>\n",
-       "      <td>LVG-178</td>\n",
-       "      <td>9041.84</td>\n",
-       "      <td>300</td>\n",
-       "      <td>2712552.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>Centro</td>\n",
-       "      <td>Cuadernos</td>\n",
-       "      <td>FQB-314</td>\n",
-       "      <td>9533.63</td>\n",
-       "      <td>413</td>\n",
-       "      <td>3937389.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>CU</td>\n",
-       "      <td>Sacapuntas</td>\n",
-       "      <td>UVT-533</td>\n",
-       "      <td>8475.74</td>\n",
-       "      <td>794</td>\n",
-       "      <td>6729737.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>Cuemanco</td>\n",
-       "      <td>Cuadernos</td>\n",
-       "      <td>UTJ-719</td>\n",
-       "      <td>2653.79</td>\n",
-       "      <td>692</td>\n",
-       "      <td>1836422.68</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -311,26 +261,16 @@
        "2  2025-01-01  Milpa Alta          Pc        NPD-486  1234.51   \n",
        "3  2025-01-01      Centro  Cargadores        NUU-712  2787.79   \n",
        "4  2025-01-01  Milpa Alta    Pinturas        HKJ-692  7216.95   \n",
-       "5  2025-01-01          CU          Pc        QPB-826  4272.52   \n",
-       "6  2025-01-01    Narvarte  Sacapuntas        LVG-178  9041.84   \n",
-       "7  2025-01-01      Centro   Cuadernos        FQB-314  9533.63   \n",
-       "8  2025-01-01          CU  Sacapuntas        UVT-533  8475.74   \n",
-       "9  2025-01-01    Cuemanco   Cuadernos        UTJ-719  2653.79   \n",
        "\n",
        "   Cantidad_Vendida  Total_Ticket  \n",
        "0               409     820936.62  \n",
        "1               819    5660682.30  \n",
        "2               556     686387.56  \n",
        "3               593    1653159.47  \n",
-       "4               305    2201169.75  \n",
-       "5               999    4268247.48  \n",
-       "6               300    2712552.00  \n",
-       "7               413    3937389.19  \n",
-       "8               794    6729737.56  \n",
-       "9               692    1836422.68  "
+       "4               305    2201169.75  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,10 +282,410 @@
     "FROM \n",
     "    Ventas\n",
     "LIMIT\n",
-    "    10\n",
+    "    5\n",
     "\"\"\"\n",
     "\n",
     "t.consultar(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20db5aa3",
+   "metadata": {},
+   "source": [
+    "# Avance 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1e74cffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sucursal</th>\n",
+       "      <th>Total_Vendido</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Santa Fé</td>\n",
+       "      <td>341139634.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sucursal  Total_Vendido\n",
+       "0  Santa Fé    341139634.4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sucursal_mayor_ventas_2da_Enero = \"\"\"SELECT \n",
+    "    Sucursal, \n",
+    "    SUM(Total_Ticket) AS Total_Vendido\n",
+    "FROM \n",
+    "    Ventas\n",
+    "WHERE \n",
+    "    Fecha BETWEEN '2025-01-16' AND '2025-01-31'\n",
+    "GROUP BY \n",
+    "    Sucursal\n",
+    "ORDER BY \n",
+    "    Total_Vendido DESC\n",
+    "LIMIT 1;\"\"\"\n",
+    "t.consultar(sucursal_mayor_ventas_2da_Enero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5868a205",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Producto</th>\n",
+       "      <th>Total_Cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tijeras</td>\n",
+       "      <td>29349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Producto  Total_Cantidad\n",
+       "0  Tijeras           29349"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "producto_menos_vendido = \"\"\"\n",
+    "SELECT \n",
+    "    Producto,\n",
+    "    SUM(Cantidad_Vendida) AS Total_Cantidad\n",
+    "FROM \n",
+    "    Ventas\n",
+    "WHERE \n",
+    "    Fecha BETWEEN '2025-01-01' AND '2025-01-31'\n",
+    "GROUP BY \n",
+    "    Producto\n",
+    "ORDER BY \n",
+    "    Total_Cantidad ASC\n",
+    "LIMIT 1;\n",
+    "\"\"\"\n",
+    "t.consultar(producto_menos_vendido)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "482e6dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sucursal</th>\n",
+       "      <th>Cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Centro</td>\n",
+       "      <td>1158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sucursal  Cantidad\n",
+       "0   Centro      1158"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sucursal_menos_venta = \"\"\"\n",
+    "SELECT \n",
+    "    Sucursal,\n",
+    "    SUM(Cantidad_Vendida) AS Cantidad\n",
+    "FROM \n",
+    "    Ventas\n",
+    "WHERE \n",
+    "    Producto = 'Tijeras' AND\n",
+    "    Fecha BETWEEN '2025-01-01' AND '2025-01-31'\n",
+    "GROUP BY \n",
+    "    Sucursal\n",
+    "ORDER BY \n",
+    "    Cantidad ASC\n",
+    "LIMIT 1;\"\"\"\n",
+    "\n",
+    "t.consultar(sucursal_menos_venta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7416475f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticket_Promedio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.639180e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticket_Promedio\n",
+       "0     2.639180e+06"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticket_promedio_0106_Polanco = \"\"\"\n",
+    "SELECT \n",
+    "    AVG(Total_Ticket) AS Ticket_Promedio\n",
+    "FROM \n",
+    "    Ventas\n",
+    "WHERE \n",
+    "    Fecha = '2025-01-06' AND\n",
+    "    Sucursal = 'Polanco';\n",
+    "\"\"\"\n",
+    "t.consultar(ticket_promedio_0106_Polanco)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc7d37f2",
+   "metadata": {},
+   "source": [
+    "# Exploracion Pandas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b67ff6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['total_bill', 'tip', 'sex', 'smoker', 'day', 'time', 'size'], dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('tips')\n",
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f6ff7ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df.head()\n",
+    "significado_columnas = {\n",
+    "    \"total_bill\" : \"Cuenta de la mesa\" ,\n",
+    "    \"tip\" : \"Propina otorgada\",\n",
+    "    \"sex\" : \"Sexo de el cliente que paga\",\n",
+    "    \"smoker\" : \"Se encuentra o no en el area de fumadores\",\n",
+    "    \"day\" : \"Dia donde sucede la venta\",\n",
+    "    \"time\" : \"Comida correspondiente al horario\",\n",
+    "    \"size\" : \"Numero de personas en la mesa\"\n",
+    "}\n",
+    "\n",
+    "columnas = pd.DataFrame(significado_columnas, index=[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "343a2dd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cuenta de la mesa</td>\n",
+       "      <td>Propina otorgada</td>\n",
+       "      <td>Sexo de el cliente que paga</td>\n",
+       "      <td>Se encuentra o no en el area de fumadores</td>\n",
+       "      <td>Dia donde sucede la venta</td>\n",
+       "      <td>Comida correspondiente al horario</td>\n",
+       "      <td>Numero de personas en la mesa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          total_bill               tip                          sex  \\\n",
+       "1  Cuenta de la mesa  Propina otorgada  Sexo de el cliente que paga   \n",
+       "\n",
+       "                                      smoker                        day  \\\n",
+       "1  Se encuentra o no en el area de fumadores  Dia donde sucede la venta   \n",
+       "\n",
+       "                                time                           size  \n",
+       "1  Comida correspondiente al horario  Numero de personas en la mesa  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columnas"
    ]
   }
  ],
